--- a/style.css
+++ b/style.css
@@ -98,6 +98,14 @@ button {
     width: 100%;
     height: 100%;
     object-fit: cover;      /* llenar el contenedor sin deformarse */
+    .grid-item img {
+    -webkit-user-drag: none;  /* Safari/Chrome */
+    -khtml-user-drag: none;
+    -moz-user-drag: none;
+    -o-user-drag: none;
+    pointer-events: none;      /* impide arrastrar la imagen */
+}
+
 }
 
 /* 🔹 Ajustes para móviles pequeños (<480px) */
